--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,68 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  devise:
+    sessions:
+      new:
+        title: "Login"
+        submit: "Log in"
+    registrations:
+      new:
+        title: "Sign up"
+        submit: "Sign up"
+      edit:
+        title: "Edit"
+        info: "(leave blank if you don't want to change it)"
+        info_current: "(we need your current password to confirm your changes)"
+        submit: "Update"
+        cancel: "Cancel my account"
+        unhappy: "Unhappy"
+        cancel_account: "Cancel my account"
+        sure: "Are you sure?"
+        back: "Back"
+        watting: "Currently waiting confirmation for:"
+    passwords:
+      new:
+        title: "Forgot your password?"
+        submit: "Send me reset password instructions"
+      edit:
+        title: "Change your password"
+        new_password: "New password"
+        confirm_password: "Confirm new password"
+        submit: "Change my password"
+    mailer:
+      confirmation_instructions:
+        title: "Welcome"
+        content: "ou can confirm your account email through the link below:"
+        confirm: "Confirm my account"
+      password_change:
+        title: "Hello"
+        content: "We're contacting you to notify you that your password has been changed."
+      reset_password_instructions:
+        title: "Hello"
+        content_header: "Someone has requested a link to change your password.
+          You can do this through the link below."
+        content: "If you didn't request this, please ignore this email."
+        content_footer: "Your password won't change until you access the link above and create a new one."
+        submit: "Change my password"
+      unlock_instructions:
+          title: "Hello"
+          content: "Your account has been locked due to an excessive number
+            of unsuccessful sign in attempts."
+          content_footer: "Click the link below to unlock your account:"
+          submit: "Unlock my account"
+    unlocks:
+      new:
+        title: "Resend unlock instructions"
+        submit: "Resend unlock instructions"
+    confirmations:
+      new:
+        title:
+          title: "Resend confirmation instructions"
+          submit: "Resend confirmation instructions"
+    shared:
+      links:
+        login: "Log in"
+        signup: "Sign up"
+        forgot_password: "Forgot your password?"
+        confirmation: "Didn't receive confirmation instructions?"
+        instructions: "Didn't receive unlock instructions?"
+        sign: "Sign in with"
