--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 en:
   title: "Framgia Edu-Tratu"
   danger_not_admin: "You not admin"
+  error_denied: "Access denied. You are not authorized to access the requested page."
   devise:
     sessions:
       new:
